<?xml version="1.0" encoding="UTF-8"?>
<project>
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.apress</groupId>
	<artifactId>ch08-usermanager-spring-hybernate</artifactId>
	<packaging>war</packaging>
	<version>0.0.1-SNAPSHOT</version>
	<name>A custom project</name>
	<url>http://www.myorganization.org</url>
	   <build>

       <defaultGoal>install</defaultGoal>

		<extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-webdav</artifactId>
				<version>1.0-beta-2</version>
			</extension>
		</extensions>


        <plugins>
        	<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<javadocVersion>1.5</javadocVersion>
					<excludePackageNames>com.jaxen</excludePackageNames>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<configuration>
					<!-- <goals>source:jar javadoc:jar deploy site:site site:deploy changes:announcement-generate</goals> -->
					<goals>source:jar deploy</goals>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<configuration>
					<filesets>
						<fileset>
							<directory>.</directory>
							<includes>
								<include>velocity*.log*</include>
								<include>res</include>
							</includes>
							<followSymlinks>false</followSymlinks>
						</fileset>
					</filesets>
				</configuration>
			</plugin>

        	<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.0.2</version>
				<configuration>
					<source>1.5</source>
					<target>1.5</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<additionalProjectnatures>
						<projectnature>
							org.springframework.ide.eclipse.core.springnature
						</projectnature>
					</additionalProjectnatures>
					<additionalBuildcommands>
						<buildcommand>
							org.springframework.ide.eclipse.core.springbuilder
						</buildcommand>
					</additionalBuildcommands>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>true</downloadJavadocs>
					<wtpversion>1.5</wtpversion>
				</configuration>
			</plugin>
        	<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>hibernate3-maven-plugin</artifactId>
				<version>2.1</version>
				<dependencies>
					<dependency>
						<groupId>${jdbc.groupId}</groupId>
						<artifactId>${jdbc.artifactId}</artifactId>
						<version>${jdbc.version}</version>
					</dependency>
				</dependencies>
			</plugin>

			<plugin>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>maven-jetty-plugin</artifactId>
				<version>6.1.19</version>
				<configuration>
					<contextPath>/usermanager</contextPath>
					<systemProperties>
            			<systemProperty>
              				<name>MAVEN_OPTS</name>
               				<value>"-Xms512m -Xmx1024m -XX:MaxPermSize=384m"</value>
            			</systemProperty>
            			<systemProperty>
              				<name>JVM-ARG</name>
               				<value>"-XX:MaxPermSize=386m"</value>
            			</systemProperty>
            			<systemProperty>
              				<name>JAVA_OPTS</name>
               				<value>"-Xms512m -Xmx1024m"</value>
            			</systemProperty>
            			<!-- <jvm-arg>-XX:MaxPermSize=256m</jvm-arg> -->

         			</systemProperties>
					<scanIntervalSeconds>4</scanIntervalSeconds>
					<connectors>
		            <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
		              <port>8080</port>
		              <maxIdleTime>60000</maxIdleTime>
		            </connector>
		          </connectors>
					<scanTargetPatterns>
						<scanTargetPattern>
							<directory>
								src/main/webapp/WEB-INF
							</directory>
							<excludes>
								<exclude>**/*.jsp</exclude>
							</excludes>
							<includes>
								<include>**/*.properties</include>
								<include>**/*.xml</include>
							</includes>
						</scanTargetPattern>
					</scanTargetPatterns>
					<maxIdleTime>0</maxIdleTime>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.0.2</version>
				<configuration>
					<dependentWarExcludes>
						**/jdbc.properties,**/hibernate.cfg.xm,**/sql-map-config.xml,**/web.xml,WEB-INF/classes/META-INF/**
					</dependentWarExcludes>
				</configuration>
			</plugin>
        </plugins>
        <resources>
			<resource>
				<directory>src/main/resources</directory>
				<excludes>
					<exclude>applicationContext-*.xml</exclude>
				</excludes>
				<filtering>true</filtering>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<includes>
					<include>applicationContext-*.xml</include>
				</includes>
				<filtering>false</filtering>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
				<filtering>true</filtering>
			</testResource>
			<testResource>
				<directory>src/main/webapp</directory>
				<filtering>true</filtering>
				<includes>
					<include>**/*.xml</include>
					<include>**/*.xsd</include>
				</includes>
			</testResource>
		</testResources>
    </build>
	<repositories>
		<repository>
		    <id>filippodipisa</id>
		    <url>http://filippodipisa.artifactoryonline.com/filippodipisa/repo</url>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring</artifactId>
			<version>2.5.6</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>2.5.6</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-core</artifactId>
			<version>2.0.4</version>
		</dependency>
		<dependency>
		    <groupId>org.springframework.flex</groupId>
		    <artifactId>spring-flex</artifactId>
		    <version>1.0.1.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjrt</artifactId>
			<version>1.5.4</version>
		</dependency>
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjweaver</artifactId>
			<version>1.5.4</version>
		</dependency>
		<dependency>
			<groupId>net.sf.ehcache</groupId>
			<artifactId>ehcache</artifactId>
			<version>${ehcache.version}</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate</artifactId>
			<version>3.2.6.ga</version>
			<exclusions>
				<exclusion>
					<artifactId>ehcache</artifactId>
					<groupId>net.sf.ehcache</groupId>
				</exclusion>
				<exclusion>
					<artifactId>commons-collections</artifactId>
					<groupId>commons-collections</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-annotations</artifactId>
			<version>3.3.0.ga</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-commons-annotations</artifactId>
			<version>3.3.0.ga</version>
		</dependency>
		<dependency>
			<groupId>com.adobe.blazeds</groupId>
			<artifactId>blazeds-common</artifactId>
			<version>3.2.0.3978</version>
		</dependency>
		<dependency>
			<groupId>com.adobe.blazeds</groupId>
			<artifactId>blazeds-core</artifactId>
			<version>3.2.0.3978</version>
		</dependency>
		<dependency>
			<groupId>com.adobe.blazeds</groupId>
			<artifactId>blazeds-remoting</artifactId>
			<version>3.2.0.3978</version>
		</dependency>
		<dependency>
			<groupId>backport-util-concurrent</groupId>
			<artifactId>backport-util-concurrent</artifactId>
			<version>3.1</version>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>2.5</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.6</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>commons-dbcp</groupId>
			<artifactId>commons-dbcp</artifactId>
			<version>1.2.2</version>
		</dependency>
		<dependency>
			<groupId>jmock</groupId>
			<artifactId>jmock</artifactId>
			<version>1.1.0</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.jmock</groupId>
			<artifactId>jmock-junit4</artifactId>
			<version>2.4.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.dbunit</groupId>
			<artifactId>dbunit</artifactId>
			<version>2.2</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.13</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>1.3.1</version>
		</dependency>
		<dependency>
	      <groupId>javax.mail</groupId>
	      <artifactId>mail</artifactId>
	      <version>${javax.mail.version}</version>
	    </dependency>
	    <dependency>
	      <groupId>xom</groupId>
	      <artifactId>xom</artifactId>
	      <version>${xom.version}</version>
	    </dependency>
	    <dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
			<version>${jstl.version}</version>
		</dependency>
		<dependency>
			<groupId>taglibs</groupId>
			<artifactId>standard</artifactId>
			<version>${jstl.version}</version>
		</dependency>
		<dependency>
			<groupId>velocity</groupId>
			<artifactId>velocity</artifactId>
			<version>${velocity.version}</version>
		</dependency>
	</dependencies>
	<properties>
  		<jdbc.groupId>mysql</jdbc.groupId>
		<jdbc.artifactId>mysql-connector-java</jdbc.artifactId>
		<jdbc.version>5.1.5</jdbc.version>
		<jdbc.driverClassName>
			com.mysql.jdbc.Driver
		</jdbc.driverClassName>
		<jdbc.url><![CDATA[jdbc\:mysql\://localhost\:3306/apress_usermanager?createDatabaseIfNotExist\=true&amp;useUnicode\=true&amp;characterEncoding\=utf-8&amp;enableQueryTimeouts\=false]]></jdbc.url>
		<jdbc.username>root</jdbc.username>
		<jdbc.password></jdbc.password>
		<hibernate.dialect>
			org.hibernate.dialect.MySQL5InnoDBDialect
		</hibernate.dialect>
   		<ehcache.version>1.3.0</ehcache.version>
		<javax.mail.version>1.4</javax.mail.version>
   		<xom.version>1.1d2</xom.version>
   		<jstl.version>1.1.2</jstl.version>
   		<velocity.version>1.4</velocity.version>
 	 </properties>
</project>
